# cmake-pthread-test

./: CMakeLists.txt  bam.cpp  boo.cpp
